--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tech-matchup-app",
+  "name": "googlebooks-app",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -13,6 +13,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.1.0"
   }
 }
